--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -14,18 +14,23 @@ body {
   font-size: 62.5%;
 }
 
-.nav {
-  width: 100%;
-  max-width: 76rem;
-  padding: 2rem;
-}
-
 h1 {
   font-size: 5rem;
 }
 
 h2 {
   font-size: 3rem;
+}
+
+li {
+  list-style: none;
+  font-size: 2.5rem;
+}
+
+.nav {
+  width: 100%;
+  max-width: 76rem;
+  padding: 2rem;
 }
 
 .container {
